data/resources/istio_objects/validation/ratings_java_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-java
  namespace: bookinfo
  labels:
    app: ratings-java
    service: ratings-java
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-java
  namespace: bookinfo
  labels:
    app: ratings-java
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings-java
      version: v1
  template:
    metadata:
      annotations:
         sidecar.istio.io/inject: "true"
      labels:
        app: ratings-java
        version: v1
    spec:
      containers:
      - name: ratings-java
        image: pilhuhn/ratings-java:f
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
