data/resources/istio_objects/validation/default-sidecar-with-workload.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default-sidecar-workload-auto
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      version: v1
  egress:
    - hosts:
        - '*/*'
