data/resources/istio_objects/validation/destination_rule_wrong_fqdn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-dr-wrong-fqdn-auto
  namespace: bookinfo
spec:
  host: wrong.bookinfo.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
