data/resources/istio_objects/validation/non_existing_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-vs-non-existing-gateway-auto
  namespace: bookinfo
spec:
  hosts:
  - details
  gateways:
  - bookinfo-gateway-non-exist
  http:
  - route:
    - destination:
        host: details
        subset: v1
