data/resources/istio_objects/validation/not_defined_protocol.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-not-defined-protocol
  namespace: bookinfo
spec:
  hosts:
  - details
