data/resources/istio_objects/validation/subset_not_have_label.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-subset-not-label-auto
spec:
  host: reviews
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
