data/resources/istio_objects/validation/vs_destination_host_not_found.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  endpoints:
  # ip is a vm/service outside the cluster
  - address: 10.15.1.121
  exportTo:
  - "."
  hosts:
  - foo-dev.istio-system.svc.cluster.localwrong
  location: MESH_EXTERNAL
  ports:
  - name: http
    number: 49000
    protocol: HTTP
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  hosts:
  - foo-dev.example.com
  gateways:
  - foo-dev
  http:
  - name: foo-svc
    match:
    - uri:
        prefix: /foo
    rewrite:
      uri: "/foo"
    route:
    - destination:
        host: foo-dev.istio-system.svc.cluster.local
        port:
          number: 49000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "foo-dev.example.com"
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - hosts:
    - "foo-dev.example.com"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-foo
  namespace: istio-system
spec:
  action: DENY
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - to:
    - operation:
        hosts:
          - "foo-dev.example.com"
        paths:
          - "/foo"
    when:
    - key: request.headers[x-token]
      notValues:
      - "fooreader"
